<?xml version="1.0"?>
<package format="2">
  <name>project_name</name>
  <version>0.1.0</version>
  <description>project description</description>
  <author>Bhanu kiran. Chaluvadi</author>
  <maintainer email="bc@todo.todo">bc</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Equalent: build_depend, build_export_depend, exec_depend  -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
    <architecture_independent />
  </export>
</package>
